Fixed unintended scrolling when when Panel  overflows.

--- a/src/assets/themes/default-template.css
+++ b/src/assets/themes/default-template.css
@@ -174,8 +174,7 @@ tr.disabled ~ tr > td > div {
   overflow: hidden;
   position: absolute;
   box-sizing: border-box;
-  width: 100%;
-  height: 100%;
+  inset: 0;
 }
 
 .vertical-splitter-left,
